--- a/index.html
+++ b/index.html
@@ -2,30 +2,86 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title></title>
+    <script src="js/script.js" charset="utf-8"></script>
   </head>
   <body>
-    <script type="text/javascript">
-        //Generatore di "nomi cognomi" casuali: prendendo una
+    <!-- <script type="text/javascript"> -->
+
+        <!-- //Generatore di "nomi cognomi" casuali: prendendo una
         // lista di nomi e una lista di cognomi, Gatsby vuole
         // generare una falsa lista di invitati.
 
-        var nomi = ['mirko', 'giovanni','pippo'];
-        var cognomi = ['sbaglia','dongu','scalvini'];
-        var listaFalsa = [];
+        // 1 listato
+        // var nomi = ['mirko', 'giovanni','pippo'];
+        //
+        // // 2 listato
+        // var cognomi = ['sbaglia','dongu','scalvini','chiefa'];
+        //
+        // // 3 listato
+        // var listaFalsa = [];
+        //
+        //
+        //
+        // // //Generiamo un nome/cognome random
+        // // var numRndNomi = Math.floor( Math.random() * nomi.length );
+        // // console.log(numRndNomi);
+        // //
+        // // var nomeRandom = nomi[numRndNomi];
+        // // console.log(nomeRandom);
+        // //
+        // // var numRndCognomi =  Math.floor( Math.random() * cognomi.length );
+        // // console.log(numRndCognomi);
+        // //
+        // // var cognomeRandom = cognomi[numRndCognomi];
+        // // console.log(cognomeRandom);
+        // //
+        // // var nomeCognome = nomeRandom + ' ' + cognomeRandom;
+        // // console.log(nomeCognome);
+        // // // fine generazione
+        //
+        //
+        //
+        //
+        //
+        // for (var i = 0; i < 10; i++) {
+        //
+        //   var numRndNomi = Math.floor( Math.random() * nomi.length );
+        //   // console.log(numRndNomi);
+        //
+        //   var nomeRandom = nomi[numRndNomi];
+        //   // console.log(nomeRandom);
+        //
+        //   var numRndCognomi =  Math.floor( Math.random() * cognomi.length );
+        //   // console.log(numRndCognomi);
+        //
+        //   var cognomeRandom = cognomi[numRndCognomi];
+        //   // console.log(cognomeRandom);
+        //
+        //   var nomeCognome = nomeRandom + ' ' + cognomeRandom;
+        //   // console.log( nomeCognome );
+        //
+        //   listaFalsa.push(nomeCognome);
+        //   // console.log(listaFalsa);
+        //
+        // }
+        //
+        // console.log(listaFalsa);
 
-        var nomiLng = nomi.length;
-        var cognomiLng = cognomi.length;
+       // var nomiLng = nomi.length;
+        // var cognomiLng = cognomi.length;
+        //
+        //
+        // for (var i = 0; i < nomi.length; i++) {
+        //   var nameRnd = nomi [Math.floor(Math.random() * nomiLng)];    // è come se scrivessi nomi = [0,4,2]
+        //   var lastnameRnd = cognomi  [Math.floor(Math.random() * cognomiLng)];
+        //   listaFalsa.push(nameRnd + ' ' + lastnameRnd);
+        // }
+        // console.log(listaFalsa); -->
 
 
-        for (var i = 0; i < nomi.length; i++) {
-          var nameRnd = nomi [Math.floor(Math.random() * nomiLng)];    // è come scrivessi nomi = [0,4,2]
-          var lastnameRnd = cognomi  [Math.floor(Math.random() * cognomiLng)];
-          listaFalsa.push(nameRnd + ' ' + lastnameRnd);
-        }
-        console.log(listaFalsa);
-
-    </script>
+    <!-- </script> -->
 
   </body>
 </html>
