--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title></title>
-    <script src="js/script.js" charset="utf-8"></script>
+    <!-- <script src="js/script.js" charset="utf-8"></script> -->
+    <script src="js/script2.js" charset="utf-8"></script>
   </head>
   <body>
     <!-- <script type="text/javascript"> -->
